// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Beau's config Loader. should load the config 1`] = `
Beau {
  "config": Config {
    "cookiejar": false,
    "defaults": Object {
      "headers": Object {
        "authentication": "hello",
      },
    },
    "endpoint": "http://example.com",
    "environment": Object {},
    "host": undefined,
    "hosts": Array [],
    "plugins": Plugins {
      "autoload": Array [
        "std",
      ],
      "context": Object {},
      "registry": Object {
        "dynamicValues": Array [],
        "postRequestModifiers": Array [],
        "preRequestModifiers": Array [],
      },
    },
    "requests": Array [],
    "version": 1,
  },
  "requests": RequestList {
    "cache": RequestCache {
      "$cache": Object {
        "env": Object {},
      },
    },
    "list": Array [],
  },
}
`;

exports[`Beau's config Loader. should load the request list using the configuration 1`] = `
RequestList {
  "cache": RequestCache {
    "$cache": Object {
      "env": Object {},
    },
  },
  "list": Array [
    Request {
      "alias": "get-post",
      "cookiejar": false,
      "dependencies": Set {},
      "endpoint": "http://example.com",
      "form": Object {},
      "formdata": Object {},
      "headers": Object {},
      "originalRequest": Object {
        "alias": "get-post",
        "cookiejar": false,
        "endpoint": "http://example.com",
        "request": "GET /posts/1",
      },
      "params": Object {},
      "path": "/posts/1",
      "payload": Object {},
      "plugins": Plugins {
        "autoload": Array [
          "std",
        ],
        "context": Object {},
        "registry": Object {
          "dynamicValues": Array [],
          "postRequestModifiers": Array [],
          "preRequestModifiers": Array [],
        },
      },
      "request": "GET /posts/1",
      "verb": "GET",
    },
    Request {
      "alias": "user",
      "cookiejar": false,
      "dependencies": Set {},
      "endpoint": "http://example.com",
      "form": Object {},
      "formdata": Object {},
      "headers": Object {
        "hello": "world",
      },
      "originalRequest": Object {
        "alias": "user",
        "cookiejar": false,
        "endpoint": "http://example.com",
        "headers": Object {
          "hello": "world",
        },
        "request": "GET /user",
      },
      "params": Object {},
      "path": "/user",
      "payload": Object {},
      "plugins": Plugins {
        "autoload": Array [
          "std",
        ],
        "context": Object {},
        "registry": Object {
          "dynamicValues": Array [],
          "postRequestModifiers": Array [],
          "preRequestModifiers": Array [],
        },
      },
      "request": "GET /user",
      "verb": "GET",
    },
  ],
}
`;
